<resources>
    <string name="app_name">Extreme-Driving</string>
    <string name="desc_right_arrow">Right Arrow</string>
    <string name="desc_left_arrow">Left Arrow</string>
    <string name="highscores">Highscores</string>
    <string name="start_game">Start game</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="speed_mode">Set Speed Mode</string>
    <string name="buttons">Buttons</string>
    <string name="sensor">Sensor</string>
    <string name="mode_game">Set Game Mode</string>
    <string name="game_title">Extreme Driving</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="ok">OK</string>
    <string name="num">Num</string>
    <string name="score">Score</string>
    <string name="show_location">Show Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="back_to_menu_BNT">Back to Menu</string>
</resources>