<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".Activity.MainMenuActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/menu_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/menu_margin_top"
        android:text="@string/game_title"
        android:textAllCaps="true"
        android:textColor="@color/button_primary_color_blue_900"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/game_mode_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_LBL_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/menu_LBL_gameMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/mode_game"
            android:textColor="@color/button_primary_color_blue_900"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_BTN_sensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/button_primary_color_blue_900"
                android:text="@string/sensor"
                android:textColor="@android:color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_BTN_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/button_primary_color_blue_900"
                android:text="@string/buttons"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/speed_mode_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_mode_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/menu_LBL_speedMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/speed_mode"
            android:textColor="@color/button_primary_color_blue_900"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_BTN_fast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/button_primary_color_blue_900"
                android:text="@string/fast"
                android:textColor="@android:color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu_BTN_slow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/button_primary_color_blue_900"
                android:text="@string/slow"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_BTN_startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_mode_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/button_primary_color_blue_900"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:text="@string/start_game"
        android:textColor="@android:color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_BTN_highscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_BTN_startGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_primary_color_blue_900"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/highscores"
        android:textColor="@android:color/white" />

</RelativeLayout>